--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -6,7 +6,7 @@
 
 html,
 body {
-  height: 100%
+  height: 100%;
 }
 
 @layer components {
@@ -21,4 +21,11 @@ body {
   .icon[data-axis*="y"] {
     @apply h-[1em];
   }
+}
+
+.example {
+  display: grid;
+  transition: all 0.5s;
+  user-select: none;
+  background: linear-gradient(to bottom, white, black);
 }
